fixed visual bugs (unicode, table overflow

--- a/carTemplate.css
+++ b/carTemplate.css
@@ -80,6 +80,8 @@
 }
 
 .table{
+
+	table-layout:fixed;
 	margin:1em;
 	padding:1em;
 }
